feat: exibição dos dados no response da tela home

--- a/api-domrock/src/main/resources/application.properties
+++ b/api-domrock/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.datasource.password = 294920@La
 # Essa anotacao e para mostrar as consultas sql formatadas, para ficar de facil leitura
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
