--- a/api-domrock/src/main/resources/application.properties
+++ b/api-domrock/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 spring.datasource.url = jdbc:mysql://localhost:3306/dataflow
 spring.datasource.username = root
-spring.datasource.password = abc123.
+spring.datasource.password = 32046213
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
