--- a/api-domrock/src/main/resources/application.properties
+++ b/api-domrock/src/main/resources/application.properties
@@ -10,3 +10,17 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=apibdfatec@gmail.com
+spring.mail.password=rhms tabs pczv ylpm
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# SSL, post 465
+spring.mail.properties.mail.smtp.socketFactory.port=465
+spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
