--- a/api-domrock/src/main/resources/application.properties
+++ b/api-domrock/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 spring.datasource.url = jdbc:mysql://localhost:3306/dataflow
 spring.datasource.username = root
-spring.datasource.password = abc123.
+spring.datasource.password = 
+api.security.token.secret=${JWT_SECRET:my-secret-key}
 
 # Essa anotacao e para mostrar as consultas sql formatadas, para ficar de facil leitura
 spring.jpa.properties.hibernate.format_sql=true
