--- a/api-domrock/src/main/resources/application.properties
+++ b/api-domrock/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.servlet.multipart.max-request-size=100MB
 spring.datasource.url = jdbc:mysql://localhost:3306/dataflow
 spring.datasource.username = root
 
-spring.datasource.password = abc123.
+spring.datasource.password = Caiotastico@01
 
 api.security.token.secret=${JWT_SECRET:my-secret-key}
 
