--- a/api-domrock/src/main/resources/application.properties
+++ b/api-domrock/src/main/resources/application.properties
@@ -25,6 +25,7 @@ spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 
+debug=true
 # SSL, post 465
 spring.mail.properties.mail.smtp.socketFactory.port=465
 spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
