--- a/api-domrock/pom.xml
+++ b/api-domrock/pom.xml
@@ -79,6 +79,11 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.2.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-yaml</artifactId>
+			<version>2.14.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
