--- a/api-domrock/pom.xml
+++ b/api-domrock/pom.xml
@@ -84,6 +84,11 @@
 			<artifactId>jackson-dataformat-yaml</artifactId>
 			<version>2.14.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>5.8</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
