chore: change sql view log

--- a/api-domrock/src/main/resources/application.properties
+++ b/api-domrock/src/main/resources/application.properties
@@ -13,7 +13,8 @@ api.security.token.secret=${JWT_SECRET:my-secret-key}
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
+spring.jpa.open-in-view=false
 
 
 spring.mail.host=smtp.gmail.com
